--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Registration Form (Bootstrap 5 Validation </title>
+  <title>Registration Form </title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css'>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dwbff95302/images/favicons/favicon-16x16.png">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
