--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Registration Form </title>
+  <title>Registration Form to Marketing Cloud </title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css'>
   <link rel="stylesheet" href="./style.css">
+  <!-- replace with your favicon png 16x16 -->
   <link rel="icon" href="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dwbff95302/images/favicons/favicon-16x16.png">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="container-full logomcmakler" style="margin:0px;">
+
+  <!-- logo section -->
+<div class="container-full" style="margin:0px;">
   <div class="row .mb-0"  style="margin:0px;">
     <div class="col-6 d-flex justify-content-start"  style="margin:0px;">
-      <a href="https://www.mcmakler.de/" target="_blank">
-        <img class="logo" src="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dw9f278a85/images/logo.svg" style="width: 200px; padding: 30px;" alt="McMakler"></a>
+      <a href="" target="_blank">
+        <img class="logo" src="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dw9f278a85/images/logo.svg" alt="NTO"></a>
     </div>
 
   </div>
 </div>
+  <!-- End of logo section -->
 
+  <!-- Form section -->
 <div class="form-body">
         <div class="row">
             <div class="form-holder">
@@ -32,19 +36,19 @@
                             <div class="col-md-12">
                                <input class="form-control" type="text" name="firstname" placeholder="First Name" required>
 
-                               <div class="invalid-feedback">Username field cannot be blank!</div>
+                               <div class="invalid-feedback">Please fill in your first name</div>
                             </div>
 
                             <div class="col-md-12">
                                <input class="form-control" type="text" name="lastname" placeholder="Last Name" required>
 
-                               <div class="invalid-feedback">Username field cannot be blank!</div>
+                               <div class="invalid-feedback">Please fill in your last name</div>
                             </div>
 
                             <div class="col-md-12">
                                 <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
 
-                                 <div class="invalid-feedback">Email field cannot be blank!</div>
+                                 <div class="invalid-feedback">Please give us a valid email/div>
                             </div>
 
                            <div class="col-md-12">
@@ -55,7 +59,7 @@
                                       <option value="electronics">Electronics</option>
                                </select>
 
-                                <div class="invalid-feedback">Please select an interes!</div>
+                                <div class="invalid-feedback">Select your interes!</div>
                            </div>
 
 
@@ -78,7 +82,7 @@
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                           <label class="form-check-label">I confirm that the data is correct</label>
-                         <div class="invalid-feedback">Please confirm that the entered data are all correct!</div>
+                         <div class="invalid-feedback">Please confirm that the data is correct!</div>
                         </div>
 
 
@@ -91,7 +95,9 @@
             </div>
         </div>
     </div>
-<!-- partial -->
+  <!-- End of logo section -->
+
+    <!-- javascript for validations -->
   <script  src="./script.js"></script>
 
 </body>
