--- a/ty.html
+++ b/ty.html
@@ -1,16 +1,27 @@
 %%[
 
-if RequestParameter("submitted") == true then
+SET @firstname = RequestParameter("firstname")
+
+if not empty(@firstname) then
 
   InsertData(
         "RegistrationsNTO",
-        "FirstName", RequestParameter("firstname"),
+        "FirstName", @firstname,
         "LastName", RequestParameter("lastname"),
         "Email", RequestParameter("email"),
         "Interest", RequestParameter("interest"),
         "Gender", RequestParameter("gender")
        )
-endif
+  set @tymessage = "Thank you for your information"
+  set @tymessage2 = "We will contact you soon"
+
+  else
+
+  set @tymessage = "Unfortunately we couldn't process your inquiry"
+  set @tymessage2 = "Please try again later!"
+
+
+ENDIF
 
 ]%%
 
@@ -21,7 +32,7 @@ endif
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Registration Form (Bootstrap 5 Validation </title>
+  <title>Thank you Page (Bootstrap 5 Validation </title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css'>
   <link rel="stylesheet" href="https://smcdigital.com.ar/formtomc/style.css">
   <link rel="icon" href="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dwbff95302/images/favicons/favicon-16x16.png">
@@ -29,11 +40,11 @@ endif
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="container-full logomcmakler" style="margin:0px;">
+<div class="container-full" style="margin:0px;">
   <div class="row .mb-0"  style="margin:0px;">
     <div class="col-6 d-flex justify-content-start"  style="margin:0px;">
-      <a href="https://www.mcmakler.de/" target="_blank">
-        <img class="logo" src="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dw9f278a85/images/logo.svg" style="width: 200px; padding: 30px;" alt="McMakler"></a>
+      <a href="" target="_blank">
+        <img class="logo" src="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dw9f278a85/images/logo.svg" style="width: 200px; padding: 30px;" alt="NTO"></a>
     </div>
 
   </div>
@@ -44,8 +55,8 @@ endif
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <h3>Thank you for your information</h3>
-                        <p>We will contact you soon!</p>
+                        <h3>%%=v(@tymessage)=%%</h3>
+                        <p>%%=v(@tymessage2)=%%</p>
 
                     </div>
                 </div>
@@ -53,7 +64,6 @@ endif
         </div>
     </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
 
 </body>
 </html>
