final changes to index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Registration Form to Marketing Cloud </title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css'>
   <link rel="stylesheet" href="./style.css">
-  <!-- replace with your favicon png 16x16 -->
+  <!-- replace with your favicon png 16x16 or delete-->
   <link rel="icon" href="https://www.northerntrailoutfitters.com/on/demandware.static/Sites-NTOSFRA-Site/-/default/dwbff95302/images/favicons/favicon-16x16.png">
 </head>
 <body>
@@ -31,7 +31,7 @@
                     <div class="form-items">
                         <h3>Register To our News</h3>
                         <p>Fill in the form and start receiving our news today!</p>
-                        <form class="requires-validation" novalidate action="https://cloud.email.mcmakler.de/tynto" method="Post">
+                        <form class="requires-validation" novalidate action="https://cloud.email.brand.com/tynto" method="Post">
 
                             <div class="col-md-12">
                                <input class="form-control" type="text" name="firstname" placeholder="First Name" required>
@@ -95,7 +95,7 @@
             </div>
         </div>
     </div>
-  <!-- End of logo section -->
+  <!-- End of form section -->
 
     <!-- javascript for validations -->
   <script  src="./script.js"></script>
